fix: grid-item:nth-child(1) fixed on mobile device

--- a/style/style.css
+++ b/style/style.css
@@ -394,6 +394,9 @@ section h2{
         grid-template-rows: auto;
         grid-column-gap: 0;
     }
+    .grid-item:nth-child(1){
+        width: 100%;
+    }
     .social-icons {
         flex-wrap: wrap;
     }
